# NR

./: .gitignore  Cargo.toml  README.md  index.d.ts  package-lock.json  package.json
src/: lib.rs
src/Addon/: Automatic.rs  Image.rs  Monitor.rs  Serve.rs  Wallpaper.rs  Window.rs  mod.rs
