[package]
edition = "2021"
name = "nr"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.15.1", default-features = false, features = ["napi4"] }
napi-derive = "2.15.0"
file-serve = "0.3.0"
wallpaper = "3.2.0"
autopilot = "0.4.0"
image = "0.24.8"
enigo = "0.1.3"
xcap = "0.0.3"

[build-dependencies]
napi-build = "2.1.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true